[package]
name = "bitflyer_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hmac = "0.12.1"

serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.79"

rust_decimal = "1.23"
rust_decimal_macros = "1.23"

chrono = "0.4.19"
crossbeam = "0.8.1"